# Duan-Ros2

./: .gitmodules  README.md  fei.txt
Cpp-YiFei/: CMakeLists.txt  learn_auto.cpp  learn_functional.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp
Node/: CMakeLists.txt  CMakeLists.txt.back  a.out  test.cc
Node/chapt2_ws/install/: local_setup.sh  setup.sh
Node/chapt2_ws/log/: latest_build
Node/chapt2_ws/src/demo_cpp_pkg/: package.xml
Node/demo_cpp_pkg/: CMakeLists.txt
Node/demo_cpp_pkg/src/: cpp_node.cpp
Node/install/: local_setup.sh  setup.sh
Node/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node
Node/install/demo_cpp_pkg/share/demo_cpp_pkg/: package.sh
Node/install/ros2_cpp/share/ros2_cpp/: package.bash  package.zsh
Node/log/: latest_build
Service/service_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
Service/service_ws/src/demo_python_service/: package.xml  setup.py
Service/service_ws/src/ser_interfaces/: CMakeLists.txt  package.xml
Simulation/sim_ws/src/duanbot_description/: CMakeLists.txt
TF-tools/tf_ws/src/demo_cpp_tf/: package.xml
TF-tools/tf_ws/src/demo_python_tf/: package.xml  setup.py
Topic/: novel.txt  novel1.txt  novel2.txt  novel3.txt
Topic/topic_2_ws/install/: local_setup.sh  setup.sh
Topic/topic_2_ws/log/: latest_build
Topic/topic_2_ws/src/demo_python_topic/: package.xml  setup.py
Topic/topic_practice_ws/install/: local_setup.sh  setup.sh
Topic/topic_practice_ws/log/: latest_build
Topic/topic_practice_ws/src/status_display/: CMakeLists.txt
Topic/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
Topic/topic_practice_ws/src/status_publisher/: setup.py
Topic/topic_ws/install/: local_setup.sh  setup.sh
Topic/topic_ws/log/: latest_build
Topic/topic_ws/src/demo_cpp_topic/: CMakeLists.txt
Topic/topic_ws/src/demo_turtle_topic/: CMakeLists.txt  package.xml
Topic/topic_ws/src/demo_turtle_topic/src/: turtle_circle.cpp  turtle_control.cpp
duan-src/duan_ws/install/: local_setup.sh  setup.sh
duan-src/duan_ws/log/: latest_build
duan-src/duan_ws/src/autopatrol_interface/: CMakeLists.txt  package.xml
duan-src/duan_ws/src/duan_autopatrol_robot/: package.xml  setup.cfg  setup.py
duan-src/duan_ws/src/duanbot_application/: package.xml  setup.cfg  setup.py
duan-src/duan_ws/src/duanbot_description/: CMakeLists.txt
duan-src/duan_ws/src/duanbot_navigation2/: CMakeLists.txt
rosbag2_2025_06_10-22_12_48/: metadata.yaml  rosbag2_2025_06_10-22_12_48_0.db3
(+90 files in other folders)
